#[package]
#authors = ["Kowalski Dark <darkkowalski2012@gmail.com>"]
#edition = "2018"
#license = "GPL-3.0"
#name = "pink-ng"
#repository = "https://github.com/darkkowalski/pink-ng"
#version = "0.1.0"

[workspace]
members = [
  "frame/contracts",
  "primitives/core",
  "primitives/debug-derive",
  "primitives/externalities",
  "primitives/runtime",
  "primitives/runtime-interface",
  "primitives/sandbox",
  "primitives/serializer",
  "primitives/std",
  "primitives/storage",
  "primitives/tracing",
  "primitives/version",
  "primitives/wasm-interface",
]
