[package]
authors = ["Kowalski Dark <darkkowalski2012@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
name = "test-executor"
repository = "https://github.com/darkkowalski/pink-ng"
version = "0.1.0"

[dependencies]
sc-executor = {path = "../client/executor"}
sp-sandbox = {path = "../primitives/sandbox"}
sp-runtime-interface = {path = "../primitives/runtime-interface"}
sp-wasm-interface = {path = "../primitives/wasm-interface"}
sp-core = {path = "../primitives/core"}

[features]
default = [ "std" ]
std = [
    "sp-wasm-interface/std",
    "sp-core/std",
]
