[package]
authors = ["Kowalski Dark <darkkowalski2012@gmail.com>"]
description = "A crate that provides means of executing/dispatching calls into the runtime."
edition = "2018"
license = "GPL-3.0"
name = "sc-executor"
repository = "https://github.com/darkkowalski/pink-ng"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0"}
derive_more = "0.99.2"
lazy_static = "1.4.0"
libsecp256k1 = "0.3.4"
log = "0.4.8"
parity-wasm = "0.41.0"
parking_lot = "0.11.1"
sc-executor-common = {version = "0.9.0", path = "common"}
sc-executor-wasmi = {version = "0.9.0", path = "wasmi"}
# sc-executor-wasmtime = {version = "0.9.0", path = "wasmtime", optional = true}
sp-api = {version = "3.0.0", path = "../../primitives/api"}
sp-core = {version = "3.0.0", path = "../../primitives/core"}
sp-externalities = {version = "0.9.0", path = "../../primitives/externalities"}
# sp-io = {version = "3.0.0", path = "../../primitives/io"}
sp-maybe-compressed-blob = {version = "3.0.0", path = "../../primitives/maybe-compressed-blob"}
sp-panic-handler = {version = "3.0.0", path = "../../primitives/panic-handler"}
sp-runtime-interface = {version = "3.0.0", path = "../../primitives/runtime-interface"}
sp-serializer = {version = "3.0.0", path = "../../primitives/serializer"}
# sp-tasks = {version = "3.0.0", path = "../../primitives/tasks"}
# sp-trie = {version = "3.0.0", path = "../../primitives/trie"}
sp-version = {version = "3.0.0", path = "../../primitives/version"}
sp-wasm-interface = {version = "3.0.0", path = "../../primitives/wasm-interface"}
wasmi = "0.6.2"

[dev-dependencies]
assert_matches = "1.3.0"
hex-literal = "0.3.1"
paste = "1.0"
# sc-runtime-test = {version = "2.0.0", path = "runtime-test"}
# sc-tracing = {version = "3.0.0", path = "../tracing"}
# sp-runtime = {version = "3.0.0", path = "../../primitives/runtime"}
# sp-state-machine = {version = "0.9.0", path = "../../primitives/state-machine"}
sp-tracing = {version = "3.0.0", path = "../../primitives/tracing"}
# substrate-test-runtime = {version = "2.0.0", path = "../../test-utils/runtime"}
tracing = "0.1.25"
tracing-subscriber = "0.2.15"
wat = "1.0"

[features]
default = ["std"]
# This crate does not have `no_std` support, we just require this for tests
std = []
wasm-extern-trace = []
wasmi-errno = [
  "wasmi/errno",
]
#wasmtime = [
#  "sc-executor-wasmtime",
#]
