[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "FRAME pallet for WASM contracts"
edition = "2018"
homepage = "https://substrate.dev"
license = "Apache-2.0"
name = "pallet-contracts"
readme = "README.md"
repository = "https://github.com/paritytech/substrate/"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
log = {version = "0.4", default-features = false}
pallet-contracts-primitives = {version = "3.0.0", default-features = false, path = "common"}
parity-wasm = {version = "0.42", default-features = false}
pwasm-utils = {version = "0.17", default-features = false}
serde = {version = "1", optional = true, features = ["derive"]}
smallvec = {version = "1", default-features = false, features = ["const_generics"]}
wasmi-validation = {version = "0.4", default-features = false}

sp-core = {version = "3.0.0", default-features = false, path = "../../primitives/core"}
sp-runtime = {version = "3.0.0", default-features = false, path = "../../primitives/runtime"}
sp-sandbox = {version = "0.9.0", default-features = false, path = "../../primitives/sandbox"}
sp-std = {version = "3.0.0", default-features = false, path = "../../primitives/std"}

lazy_static = { version = "1.1.0", features = ["spin_no_std"] }

[dev-dependencies]
assert_matches = "1"
hex-literal = "0.3"
paste = "1"
pretty_assertions = "0.7"
wat = "1"

[features]
default = ["std"]
std = [
  "serde",
  "codec/std",
  "sp-core/std",
  "sp-runtime/std",
  "sp-std/std",
  "sp-sandbox/std",
  "parity-wasm/std",
  "pwasm-utils/std",
  "wasmi-validation/std",
  "log/std",
  "pallet-contracts-primitives/std",
]
