[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Substrate runtime api primitives"
edition = "2018"
homepage = "https://substrate.dev"
license = "Apache-2.0"
name = "sp-api"
readme = "README.md"
repository = "https://github.com/paritytech/substrate/"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false}
sp-version = {version = "3.0.0", default-features = false, path = "../version"}
sp-runtime = {version = "3.0.0", default-features = false, path = "../runtime"}

[features]
default = ["std"]
std = [
  "codec/std",
  "sp-version/std",
]
