[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "This crate provides means to instantiate and execute wasm modules."
edition = "2018"
homepage = "https://substrate.dev"
license = "Apache-2.0"
name = "sp-sandbox"
readme = "README.md"
repository = "https://github.com/paritytech/substrate/"
version = "0.9.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false}
sp-core = {version = "3.0.0", default-features = false, path = "../core"}                     # NOTICE: port this
# sp-io = {version = "3.0.0", default-features = false, path = "../io"}
sp-std = {version = "3.0.0", default-features = false, path = "../std"}                       # NOTICE: port this
sp-wasm-interface = {version = "3.0.0", default-features = false, path = "../wasm-interface"} # NOTICE: port this
wasmi = {version = "0.6.2", optional = true}

[dev-dependencies]
assert_matches = "1.3.0"
wat = "1.0"

[features]
default = ["std"]
std = [
  "wasmi",
  "sp-core/std",
  "sp-std/std",
  "codec/std",
  # "sp-io/std",
  "sp-wasm-interface/std",
]
strict = []
