[package]
authors = ["Parity Technologies <admin@parity.io>"]
description = "Version module for the Substrate runtime; Provides a function that returns the runtime version."
documentation = "https://docs.rs/sp-version"
edition = "2018"
homepage = "https://substrate.dev"
license = "Apache-2.0"
name = "sp-version"
readme = "README.md"
repository = "https://github.com/paritytech/substrate/"
version = "3.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"]}
impl-serde = {version = "0.3.1", optional = true}
serde = {version = "1.0.101", optional = true, features = ["derive"]}
sp-std = {version = "3.0.0", default-features = false, path = "../std"}
sp-core = { version = "3.0.0", path = "../core" }
sp-runtime = { version = "3.0.0", default-features = false, path = "../runtime" }

[features]
default = ["std"]
std = [
  "impl-serde",
  "serde",
  "codec/std",
  "sp-std/std",
  "sp-core/std",
  "sp-runtime/std",
]
