[package]
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"
homepage = "https://substrate.dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
name = "sc-runtime-test"
publish = false
repository = "https://github.com/paritytech/substrate/"
version = "2.0.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-allocator = {version = "3.0.0", default-features = false, path = "../../../primitives/allocator"}
sp-core = {version = "3.0.0", default-features = false, path = "../../../primitives/core"}
# sp-io = { version = "3.0.0", default-features = false, path = "../../../primitives/io" }
# sp-runtime = {version = "3.0.0", default-features = false, path = "../../../primitives/runtime"}
sp-sandbox = {version = "0.9.0", default-features = false, path = "../../../primitives/sandbox"}
sp-std = {version = "3.0.0", default-features = false, path = "../../../primitives/std"}
# sp-tasks = {version = "3.0.0", default-features = false, path = "../../../primitives/tasks"}

[build-dependencies]
substrate-wasm-builder = {version = "4.0.0", path = "../../../utils/wasm-builder"}

[features]
default = ["std"]
std = [
  "sp-allocator/std",
  "sp-core/std",
  # "sp-io/std",
  #"sp-runtime/std",
  "sp-sandbox/std",
  "sp-std/std",
  #"sp-tasks/std",
]
